2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs.adb, accs_proc.adb, accs_sec.adb, accs.out accs_sec.out:
	Complete and include into regtest process.

	* afile_sec.adb, hload_sec.adb:
	Add ~ MAIN [SSL] macro.

	* spair_proc.adb, smem_proc.adb:
	Add copyright header and comment.

2005-09-09  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* accs.adb, accs_proc.adb:
	Test for package AWS.Net.Acceptors. Without regtest macro because not
	 complete for now.

2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* smem.out, smem.adb, smem_proc.adb, smem_sec.adb, smem_sec.out:
	New regtest for copy and reuse socket.

2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* spair.adb, spair_sec.adb, spair.out, spair_sec.out, spair_proc.adb:
	New regression test for connected socket pair creation.

2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* strm.adb, strm.out:
	Add test for header answer with undefined responce length.
	Add UEH routine for to unexpected exceptions.
	Update copyright years.
	Reorder "with" part.

2005-07-13  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* zopen.adb:
	Use Get_Free_Port.

2005-07-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws.mime:
	Regular expression is in slashes.

2005-07-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws.mime:
	New MIME configuration file.

	* tmime.adb, tmime.out:
	Add test for user defined MIME types in aws.mime configuration file.

	* tmime.adb, tmime.out, aws.mime:
	Add test for regular expression in user defined MIME types in aws.mime
	 configuration file.

2005-07-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* afile_pack.adb:
	(CB): Show unsupported URI.

2005-06-23  Pascal Obry  <pascal@obry.net>

	* soap_hotplug_pack_service-client.adb:
	Update to properly compile after name spaces changes.
        Continued work for E614-015.

2005-06-22  Pascal Obry  <pascal@obry.net>

	* wsdl_6.ads, wsdl_6.adb:
        Add echo routines for the SOAP Byte, Unsigned_Long, Unsigned_Int,