@@ -1,5 +1,10 @@
 2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
+	* accs_proc.adb:
+	Wait for server tasks complete to stabilize console output in linux.
+
+2005-09-10  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
 	* accs.adb, accs_proc.adb, accs_sec.adb, accs.out accs_sec.out:
 	Complete and include into regtest process.
 
